--- a/admin/css/my-day-email-admin.css
+++ b/admin/css/my-day-email-admin.css
@@ -17,9 +17,10 @@
  	margin: 20px;
  }
 
-  #namedaysemail-setting textarea {
+  #namedaysemail-setting textarea,  #birthdaysemail-setting textarea {
  	width: 100%;
  }
+ 
   #namedaysemail-setting select {
   	line-height: normal;
   	vertical-align: initial;
